--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "@testing-library/user-event": "^7.1.2",
     "material-table": "^1.57.2",
     "material-ui-icons": "^1.0.0-beta.36",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.28",
     "react": "^16.13.0",
+    "react-big-calendar": "^0.24.1",
     "react-dom": "^16.13.0",
     "react-router": "^4.1.3",
     "react-router-dom": "^5.1.2",
